vertical space changes

--- a/_posts/2018-02-15-scale.markdown
+++ b/_posts/2018-02-15-scale.markdown
@@ -8,161 +8,128 @@ categories: psychology
 
 In this article I'm going to pose a not so novel compatibilistic
 idea about the so-recurrent philosophical discussion of free will and
-determinism.
+determinism. However this can apply to any topic where reductionism is
+over-used. Let's get started.
 
-However this can apply to any topic where reductionism is over-used.
-
-Let's get started.
-
-There exists many views on free will and determinism.
-
-Some are about physicalism and materialism, others about metaphysical
-explanations, others about incompatibilistic views and compatibilistic
-ones, etc..
-
-Within those we find a growing trend of analytic thinkers that love to
-break down the meaning of words and by consequence get stuck on the
-semantic, most often leading to the dismissal of further interesting
-explanations.
-
-This kind of analytic view has its merits, which I won't argue in this
-article. It's not as innately simplistic and non-valuable as some may
-portray it.
+There exists many views on free will and determinism. Some are about
+physicalism and materialism, others about metaphysical explanations,
+others about incompatibilistic views and compatibilistic ones,
+etc.. Within those we find a growing trend of analytic thinkers that
+love to break down the meaning of words and by consequence get stuck on
+the semantic, most often leading to the dismissal of further interesting
+explanations.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This kind of analytic view has
+its merits, which I won't argue in this article. It's not as innately
+simplistic and non-valuable as some may portray it.
 
 The standard definition of free will is: "The ability to choose between
 different possible courses of action unimpeded.", "The ability to act
-at one's own discretion."
-
-However, as with any such topic there exist many definitions. For example:
-"The ability to make choices which the outcome has not been determined
-by past events." This particular one doesn't leave much space for free
-will if determinism is unchallenged. I will try to focus the discussion
-on the first definition I mentioned.
+at one's own discretion."  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; However, as with any such topic there
+exist many definitions. For example: "The ability to make choices which
+the outcome has not been determined by past events." This particular one
+doesn't leave much space for free will if determinism is unchallenged. I
+will try to focus the discussion on the first definition I mentioned.
 
 The argument on the front line these day, the analytic one, stems from
 the stance of physicalism and materialism. Simply put, physicalism
 consist of saying that mater is the fundamental substance of nature,
-that everything is physical and follows the laws of physics.
-
-It unfolds as follow: Everything is physical, thus obeying the laws of
-physics, all the causalities are innevitable, determined, and because
-human are physical beings they are also determined. There's no course of
-action that is possible other than the one we are currently on. Which
-concludes that free will is non-existent because decision making is
-useless and won't change what events will happen in the future.
-
-Regardless of the huge leap that is done in the conclusion this might
-sound like some appealing logical steps to make, right?
+that everything is physical and follows the laws of physics.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; It unfolds as follow: Everything
+is physical, thus obeying the laws of physics, all the causalities are
+innevitable, determined, and because human are physical beings they are
+also determined. There's no course of action that is possible other
+than the one we are currently on. Which concludes that free will is
+non-existent because decision making is useless and won't change what
+events will happen in the future.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Regardless of the huge leap that
+is done in the conclusion this might sound like some appealing logical
+steps to make, right?
 
 This type of perception of free will is called incompatibilistic, free
-will and determinism cannot live together according to those.
-
-Another incompatibilistic view could be a religious one. For instance
-pointing supreme beings that dictate the will of the world.
-
-Though it might depends on which religious doctrine. For example,
-dualists would be compatibilist, separating the mind/soul/metaphysics
-from the body/material/physical and giving the free will to one of the
-previous two.
-
-However, if we allow for metaphysics it would break all of modern
-physics. For something to affect the world it has to interact with it
-and to interact with something material it has to be material. If the
-mind is non-material then it cannot interact with the body.
+will and determinism cannot live together according to those. Another
+incompatibilistic view could be a religious one. For instance pointing
+supreme beings that dictate the will of the world.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Though it might depends on which
+religious doctrine. For example, dualists would be compatibilist,
+separating the mind/soul/metaphysics from the body/material/physical and
+giving the free will to one of the previous two.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; However, if we allow for metaphysics
+it would break all of modern physics. For something to affect the world
+it has to interact with it and to interact with something material it
+has to be material. If the mind is non-material then it cannot interact
+with the body.
 
 As far as incompatibilist are concerned their main issue with
 compatibilist is that they claim they are redefining free will to suit
-their views.
-
-It is ironic, there are many definitions of free will and it doesn't
-mean that the absolutist and eternalist view of incompatibilism is the
-perfect one because it _looks_ like pure deduction. It doesn't render
-all other definitions invalid.
-
-What would make this less confusing would be to use different words to
-specify the kind of free will. We could call "physicalist free will"
-the above. Or even better, if we made taboo the words "free will" in a
-discussion about it, we'd have to start by agreeing or disagreeing on
-what it actually means for us.
-
-On the compatibilist side there are many arguments too. For example
-saying that determinism is required to be able to choose between different
-outcomes, that a base of causality is needed to have judgement upon.
-
-Other compatibilists put emphasis on the causality part, it doesn't mean
-that there is causality that there should be determinism. We realize
-causality only after the fact.
+their views. It is ironic, there are many definitions of free will and it
+doesn't mean that the absolutist and eternalist view of incompatibilism
+is the perfect one because it _looks_ like pure deduction. It doesn't
+render all other definitions invalid.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; What would make this less confusing
+would be to use different words to specify the kind of free will. We
+could call "physicalist free will" the above. Or even better, if we made
+taboo the words "free will" in a discussion about it, we'd have to start
+by agreeing or disagreeing on what it actually means for us.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; On the compatibilist side there are
+many arguments too. For example saying that determinism is required to
+be able to choose between different outcomes, that a base of causality
+is needed to have judgement upon.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Other compatibilists put emphasis
+on the causality part, it doesn't mean that there is causality that
+there should be determinism. We realize causality only after the fact.
 
 There are many stances.
 
-
 We definitely can't deduce facts from subjective experiences but when
 discussing free will we have to acknowledge that the experience itself
-is a part of it.
-
-Some call it qualia, or the knowledge of having lived an experience. This
-knowledge shouldn't be dismissed.
-
-For example when we loose our temper there is the feeling that we
-aren't acting based on our free will, we know that we lost control for
-some moments
-
-Now, because we have a physical base it doesn't remove the validity of
-those experiences. The reductionist would call it the illusion of free
-will. I think this is misleading and avoiding the explanation.
-
-There exists a sense of agency, volition, locus of control, "where one
-must believe they are an agent in order to function and develop a theory
-of mind."
-
-I do not think the question is about everything having a cause and that
-if everything has a cause then that causes determine everything and jump
-directly to "free will doesn't exist".
-
-When we talk about free will we rarely discuss the basic constructions
-of the world and their causations, we rarely talk about particles that
-bounce and influence our actions. We rarely calculate every single moves
-based on the current state of the universe at that precise moment.
-
-What we do is talk about someone facing a decision, someone being forced
-to do something, Someone taking credit, someone being blamed, etc..
+is a part of it. Some call it qualia, or the knowledge of having lived
+an experience. This knowledge shouldn't be dismissed. For example when
+we loose our temper there is the feeling that we aren't acting based on
+our free will, we know that we lost control for some moments  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Now, because we have a physical base
+it doesn't remove the validity of those experiences. The reductionist
+would call it the illusion of free will. I think this is misleading
+and avoiding the explanation. There exists a sense of agency, volition,
+locus of control, "where one must believe they are an agent in order to
+function and develop a theory of mind."  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I do not think the question is
+about everything having a cause and that if everything has a cause
+then that causes determine everything and jump directly to "free will
+doesn't exist". When we talk about free will we rarely discuss the basic
+constructions of the world and their causations, we rarely talk about
+particles that bounce and influence our actions. We rarely calculate
+every single moves based on the current state of the universe at that
+precise moment. What we do is talk about someone facing a decision,
+someone being forced to do something, Someone taking credit, someone
+being blamed, etc..
 
 It sounds more like its core is about identity and repression of identity
-and not about causality.
+and not about causality. What would the entity wish for in its current
+state as the next decision. What are decisions taken by an entity?  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The answer would be that it depends
+on how we choose to define the entity.  Do we define it as a mind within
+a body, the so-called dualism or essentialism. Do we define it as only
+the conscious part of the mind or as all of the body together. Most are
+brought up to think intuitively that there's a ghost in the machine but
+it doesn't make it more valid.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Then someone might want to point
+out that we are influenced by society "in the back of our heads", that
+we're "manipulated in our subconscious". Which I would retort with:
+Do we consider our subconscious a part of ourselves or not? If yes then
+the influence is part of the composition of ourselves and so we're still
+acting out of free will even if subconsciously.
 
-What would the entity wish for in its current state as the next decision.  
-What are decisions taken by an entity?
-
-The answer would be that it depends on how we choose to define the entity.
-
-Do we define it as a mind within a body, the so-called dualism or
-essentialism. Do we define it as only the conscious part of the mind or
-as all of the body together.
-
-Most are brought up to think intuitively that there's a ghost in the
-machine but it doesn't make it more valid.
-
-Then someone might want to point out that we are influenced by society
-"in the back of our heads", that we're "manipulated in our subconscious".
-
-Which I would retort with: Do we consider our subconscious a part of
-ourselves or not? If yes then the influence is part of the composition
-of ourselves and so we're still acting out of free will even if
-subconsciously.
-
-This is the portion I want to press, it depends on how you define
-the self.
-
-If you don't think the self exists then you won't think free will exist
-because there's no one to exert it on.
-
-What constitutes us? Does consciousness reside only in the head? Is
-consciousness a requirement for free will?
-
-For instance, Philippe Rochat in his book _Others in Mind: Social Origins
-of Self-Consciousness_ defines different types of "consciousness" that
-develop throughout life and that later on interact with one another
-together constituting the self.
+This is the portion I want to press, it depends on how you define the
+self. If you don't think the self exists then you won't think free will
+exist because there's no one to exert it on.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; What constitutes us? Does
+consciousness reside only in the head? Is consciousness a requirement
+for free will?  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; For instance, Philippe Rochat in
+his book _Others in Mind: Social Origins of Self-Consciousness_ defines
+different types of "consciousness" that develop throughout life and that
+later on interact with one another together constituting the self.
 
 * non-consciousness
 * awareness
@@ -173,88 +140,70 @@ together constituting the self.
 
 Co-awareness and co-consciousness arise only in social environment. What
 if we used those as the entity of free will, do we then have to include
-the social environment as a free will agent too?
+the social environment as a free will agent too?  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Again, this is the important aspect,
+where do we draw the line. It is nebulous and rightly so. And this is
+the same for the physical world. Where does a cloud end? Where does the
+line between me and the chair starts?  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; If we break down the problem into
+small parts, zoomed in, split the particles into their most simple
+components, then the delimitations would disappear. The chair and
+myself wouldn't matter anymore at this level. This is the same kind of
+result the incompatibilist physicalists try to make with free will in
+my opinion. They try to reduce the discussion to absurdism, which can
+be done with any topic.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Why not separate the layers,
+even vaguely, to say that some aspect of reality make sense in one
+but not in others. That some concepts don't compute at higher, lower,
+or across layers.
 
-Again, this is the important aspect, where do we draw the line. It is
-nebulous and rightly so. And this is the same for the physical world.
-
-Where does a cloud end? Where does the line between me and the chair
-starts?
-
-If we break down the problem into small parts, zoomed in, split the
-particles into their most simple components, then the delimitations
-would disappear. The chair and myself wouldn't matter anymore at this
-level. This is the same kind of result the incompatibilist physicalists
-try to make with free will in my opinion. They try to reduce the
-discussion to absurdism, which can be done with any topic.
-
-Why not separate the layers, even vaguely, to say that some aspect of
-reality make sense in one but not in others. That some concepts don't
-compute at higher, lower, or across layers.
-
-Scale needs to be addressed.
-
-At the scale of the single neuron we cannot talk about the free will of
-the human individual, at the scale of the universe we cannot also talk
-about free will of the human individual.
-
-But then it depends on what we consider as the individual.
-
-We often hear both: "I didn't choose to be born here", a before existence
-statement, and "I didn't choose to get sick" a during existence statement.
-
-The first sentence doesn't make much sense because before existence there
+Scale needs to be addressed. At the scale of the single neuron we cannot
+talk about the free will of the human individual, at the scale of the
+universe we cannot also talk about free will of the human individual. But
+then it depends on what we consider as the individual.  We often hear
+both: "I didn't choose to be born here", a before existence statement,
+and "I didn't choose to get sick" a during existence statement. The
+first sentence doesn't make much sense because before existence there
 isn't anything where free will can be exerted upon. After existence this
 sentence would make sense only if the sickness was something that was
 available on the same layer as the layer where we consider the identity
 to exists.
 
-This means free will lives from interactions.
+This means free will lives from interactions. Those interactions happen
+between intentional agents, regardless if conscious or not. When something
+is imposed from one intentional agent to another then this agent looses
+its free will.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I would loosely define an intentional
+agent as an entity that is a causation in itself and that has goals to
+sustain itself.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This interpretation allows to say,
+for instance, that the universe itself knows the causality to itself, it
+is itself, thus an intentional agent. This is imprecise and I'm willing
+to leave it at that because the lines between layers are themselves fuzzy.
 
-Those interactions happen between intentional agents, regardless if
-conscious or not.
-
-When something is imposed from one intentional agent to another then
-this agent looses its free will.
-
-I would loosely define an intentional agent as an entity that is a
-causation in itself and that has goals to sustain itself.
-
-This interpretation allows to say, for instance, that the universe itself
-knows the causality to itself, it is itself, thus an intentional agent.
-
-This is imprecise and I'm willing to leave it at that because the lines
-between layers are themselves fuzzy.
-
-What constitutes free will then?  
-It is the ability that an agent posses to interact within its level of
-existence, be it another intentional agent or not, for its own causation
-and not one of another agent on the same level.
-
-According to this, free will comes and goes, regardless of determinism
-or not.
-
-The "would you have done otherwise" would depend on the scenario.
+What constitutes free will then? It is the ability that an agent posses
+to interact within its level of existence, be it another intentional
+agent or not, for its own causation and not one of another agent on the
+same level. According to this, free will comes and goes, regardless of
+determinism or not. The "would you have done otherwise" would depend on
+the scenario.
 
 Moreover, we could conjecture that this doesn't have to stop at the
 human level. Philosophical zombies could have free will, the Chinese
-room thought experiment would be useless to bring in discussions too.
-
-We could go a step further and count in entities which lives are
-slower. Why limit it to one being, why not say that an entity could be
-composed of many living beings.
-
-What about considering the conglomeration of all the trees on earth as
-one intentional agent.
+room thought experiment would be useless to bring in discussions too.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; We could go a step further and
+count in entities which lives are slower. Why limit it to one being,
+why not say that an entity could be composed of many living beings. What
+about considering the conglomeration of all the trees on earth as one
+intentional agent.
 
 I digress, nebulosity doesn't equate with non-sense. It's a well chosen
 term sometimes and limiting the question of free will to scales brings
 meaning to it. The scale where we apply our definition of entity,
-identity, and the self.
-
-I hope I could convey my ideas as clear as possible without being too
-misleading. Don't forget who exercises free will and what constitutes this
-"who".
+identity, and the self.  
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; I hope I could convey my ideas
+as clear as possible without being too misleading. Don't forget who
+exercises free will and what constitutes this "who".
 
 -----
 
