--- a/_posts/2018-02-15-scale.markdown
+++ b/_posts/2018-02-15-scale.markdown
@@ -208,6 +208,8 @@ exercises free will and what constitutes this "who".
 -----
 
 
-The closest idea to this layer approach I found is Daniel Dennett view on
-[intentional stance](https://en.wikipedia.org/wiki/Intentional_stance).
+The closest idea to this layer approach
+I found is Daniel Dennett view on [intentional
+stance](https://en.wikipedia.org/wiki/Intentional_stance) and Roger
+Scruton [On Human Nature](https://www.amazon.co.uk/gp/product/069116875X).
 
